Custom shipping method changes

--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/templates/resources/checkout.properties
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/templates/resources/checkout.properties
@@ -37,7 +37,7 @@ heading.create.account=Create Account
 heading.shipping.to=Shipping To
 heading.ship.to.address=Shipping To
 heading.billing.address=Billing Address
-heading.shipping.method=Shipping Method
+heading.shipping.method=Delivery Details
 heading.address.incomplete=Please edit shipping address information and save.
 
 title.checkout=Checkout
